/// home page
const HOME = "Home";
const LIBRARY = "Library";
const SEARCH_BAR_LABEL = "Search Play Books";
const TAB_EBOOKS = "Ebooks";
const TAB_AUDIO_BOOKS = "Audiobooks";
const EBOOK_FOR_YOU = "Ebooks for you";
const ON_YOUR_WISHLIST = "On your wishlist";
const OPEN_SERIES = "Open Series";
...
