...
                  margin: EdgeInsets.all(
                    MARGIN_MEDIUM,
                  ),
                  child: Icon(
                    Icons.more_horiz_outlined,
                    color: COLOR_WHITE,
                    key: Key("BOOK_OPTION"),
                  ),
                ),
              ),
            ),
            Align(
              alignment: Alignment.bottomRight,
...
