...
      padding: EdgeInsets.all(MARGIN_MEDIUM_2),
      child: Row(
        children: [
          IconView(
            icon: Icons.arrow_back_ios,
            onTapIcon: () => onTapBack(),
            key: Key("BACK"),
          ),
          Spacer(),
          IconView(
            icon: Icons.search,
            onTapIcon: () => onTapSearch(),
          ),
...
