...
        Spacer(),
        GestureDetector(
          onTap: () => onTapGridButton(),
          child: Icon(
            Icons.list,
            color: COLOR_GREY,
            key: Key("CHANGE_LAYOUT"),
          ),
        ),
      ],
    );
  }
}
...
